--- a/1.html
+++ b/1.html
@@ -1,19 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>WEB1 - HTML</title>
-  <meta charset="utf-8">
-</<head>
-<body>
-  <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTM</a>L</li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
-<h2>HTML이란 무엇인가?</h2>
-<p style="margin-top:25px;"><a href="https://www.w3.org/TR/2017/REC-html52-20171214/" target="_blank" title="html 5.2 specification">HyperText Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applcations. Web browsers receive HHTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semnantically and originally included cues for the appearace of the document.</p>
-<p style="margin-top:20px;""><img src="coding.jpg" width="100%"></p>
-<p style="margin-top:20px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a maens to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTMLelements are delineated by tags, written using angle brackets.</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>WEB1 - HTML</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <div id="article">
+      <h2>HTML이란 무엇인가?</h2>
+        <div id="content">
+          <p style="margin-top:20px;"><a href="https://www.w3.org/TR/2017/REC-html52-20171214/" target="_blank" title="html 5.2 specification">HyperText Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applcations. Web browsers receive HHTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semnantically and originally included cues for the appearace of the document.</p>
+          <p style="margin-top:20px;"><img src="coding.jpg" width="100%"></p>
+          <p style="margin-top:20px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a maens to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
