--- a/2.html
+++ b/2.html
@@ -1,19 +1,83 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>WEB2 - CSS</title>
-  <meta charset="utf-8">
-</<head>
-<body>
-  <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTM</a>L</li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
-<h2>CSS란 무엇인가?</h2>
-<p style="margin-top:25px;"><a href="https://www.w3.org/Style/CSS/specs.en.html" target="_blank" title="CSS specification">Cascading Style Sheets (CSS)</a> is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</P>
-<p style="margin-top:20px;">CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file which reduces complexity and repetition in the structural content as well as enabling the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.</p>
-<p style="margin-top:20px;">Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>WEB2 - CSS</title>
+    <style>
+      body{
+        margin:0px;
+        font-family: "Times New Roman"
+      }
+      a {
+        color:black;
+        text-decoration: none;
+      }
+      h1 {
+        font-size:45px;
+        text-align: center;
+        border-bottom:1px solid gray;
+        margin:0px;
+        padding:20px;
+      }
+      #grid{
+        display: grid;
+        grid-template-columns: 150px 1fr
+      }
+      #grid ol{
+        font-size: 20px;
+        border-right:1px solid gray;
+        width:70px;
+        margin:0px;
+        padding:35px;
+      }
+      #grid #article{
+        padding: 10px;
+      }
+      #content{
+        font-size: 18px;
+      }
+      @media(max-width:500px) {
+        h1{
+          font-size: 30px;
+          border-bottom: 0px;
+          padding: 5px;
+        }
+        #grid{display: block;}
+        #grid ol{
+          border-right:0px;
+          padding-bottom: 15px;
+        }
+        #grid #article{
+          border-top: 1px solid gray;
+        }
+      }
+      </style>
+  </head>
+  <body>
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <!--
+        <li><a href="2.html" style="color:red; text-decoration:underline">CSS</a></li> -->
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <!--
+      <h1><a href="index.html"><font color="blue">WEB</font></a></h1>
+      <ol>
+        <li><a href="1.html"><font color="blue">HTML</font></a></li>
+        <li><a href="2.html"><font color="blue">CSS</font></a></li>
+        <li><a href="3.html"><font color="blue">JavaScript</font></a></li>
+      </ol> -->
+      <div id="article">
+          <h2>CSS란 무엇인가?</h2>
+            <div id="content">
+              <p style="margin-top:25px;"><a href="https://www.w3.org/Style/CSS/specs.en.html" target="_blank" title="CSS specification">Cascading Style Sheets (CSS)</a> is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
+              <p style="margin-top:20px;">CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file which reduces complexity and repetition in the structural content as well as enabling the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.</p>
+              <p style="margin-top:20px;">Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.</p>
+            </div>
+      </div>
+    </div>
+  </body>
 </html>
